force-app/main/default/objects/LLC_BI__DocManager__c/fields/LLC_BI__docStore__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docStore__c</fullName>
    <description>This field is not currently used on the DocManager object.</description>
    <label>Document Store</label>
    <type>TextArea</type>
</CustomField>