force-app/main/default/objects/LLC_BI__DocManager__c/fields/LLC_BI__ESignature_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ESignature_Email_Message__c</fullName>
    <description>This field contains a default message that will be inserted in the email template that is sent to signers when initiating an e-signature transaction. The field can include Forms syntax to add logic for incorporating nCino field values into the default message, e.g. Loan Officer contact information.</description>
    <label>E-Signature Email Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>