force-app/main/default/objects/LLC_BI__DocManager__c/fields/LLC_BI__namespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__namespacePrefix__c</fullName>
    <defaultValue>&quot;LLC_BI&quot;</defaultValue>
    <description>This field is optional. It has a default value of LLC_BI. It should not be changed.</description>
    <label>Namespace Prefix</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>